Initial project push

--- a/myproject/myapp/templates/login.html
+++ b/myproject/myapp/templates/login.html
@@ -26,7 +26,7 @@
                 </div><br>
                 {% if messages %}
                 {% for i in messages %}
-                <p style="color: red;">{{ i }}</p>
+                <p style="color: rgb(233, 73, 45);">{{ i }}</p>
                 {% endfor %}
                 {% endif  %}
                 <div class="col-10 d-sm-flex py-3">
