--- a/myproject/myapp/static/css/login.css
+++ b/myproject/myapp/static/css/login.css
@@ -2,7 +2,7 @@
 
 
 .login-page{
-    background: url(../images/pexels-photo-14411385.jpeg);
+    background:linear-gradient(rgba(0, 0, 0, 0.199),rgba(0, 0, 0, 0.467)), url(../images/pexels-photo-14411385.jpeg);
     max-width: 100%;
     height: 100vh;
     background-position: center center;
